--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
   /* Color variables for future use */
   :root {
     /* --color-bg: #fcfaf8; */
-    /* --color-accent: #14cf93; */
+    /* --color-accent: #00ffd5; */
+    /* --color-accent-light: rgba(0, 255, 213, 0.2); */
     /* --color-accent: ##64ffda; */
     /* --color-accent: #61dafb); */
     /* --color-text: #383838; */
@@ -15,8 +16,10 @@
 
     --color-bg: theme(colors.slate.900);
     --color-bg-secondary: theme(colors.slate.800/0.6);
-    --color-accent: theme(colors.teal.300);
-    --color-accent-light: theme(colors.teal.400/0.1);
+    /* --color-accent: theme(colors.teal.300);
+    --color-accent-light: theme(colors.teal.400/0.2); */
+    --color-accent: #00ffd5;
+    --color-accent-light: rgba(0, 255, 213, 0.2);
     --color-text: theme(colors.slate.400);
     --color-dark-1: theme(colors.slate.200);
     --color-dark-2: theme(colors.slate.300);
