--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,9 @@
     --color-accent-light: theme(colors.teal.400/0.2); */
     --color-accent: #00ffd5;
     --color-accent-light: rgba(0, 255, 213, 0.2);
-    --color-text: theme(colors.slate.400);
+    --color-text: theme(colors.slate.300);
     --color-dark-1: theme(colors.slate.200);
-    --color-dark-2: theme(colors.slate.300);
+    --color-dark-2: theme(colors.slate.500);
     --color-dark-3: theme(colors.slate.700);
   }
 
@@ -36,22 +36,6 @@
 }
 
 /* Typography */
-h1,
-.h1 {
-  @apply text-3xl leading-relaxed sm:text-4xl  capitalize font-medium text-dark-1;
-}
-
-h2,
-.h2 {
-  @apply text-xl md:text-2xl;
-}
-
-h3,
-.h3 {
-  @apply text-lg md:text-xl;
-}
-
-h4,
-.h4 {
-  @apply text-base font-bold md:text-lg;
+.heading-tertiary {
+  @apply text-sm font-bold uppercase text-dark-2;
 }
