--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 }
 
 .container {
-  @apply mx-auto px-4 sm:px-8 md:px-28 lg:px-20 xl:px-0 max-w-screen-xl;
+  @apply w-11/12 mx-auto max-w-screen-xl;
 }
 
 /* Typography */
