--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,22 @@
 @tailwind utilities;
 
 @layer base {
+
   /* Color variables for future use */
   :root {
     /* --color-bg: #fcfaf8; */
     /* --color-accent: #00ffd5; */
     /* --color-accent-light: rgba(0, 255, 213, 0.2); */
-    /* --color-accent: ##64ffda; */
-    /* --color-accent: #61dafb); */
+    /* --color-accent: #64ffda; */
+    /* --color-accent: #61dafb; */
     /* --color-text: #383838; */
     /* --color-dark-2: #282828; */
     /* --color-dark-3: #a2a2a2; */
 
+    /* --color-accent: theme(colors.teal.300);
+    --color-accent-light: theme(colors.teal.400/0.2); */
     --color-bg: theme(colors.slate.900);
     --color-bg-secondary: theme(colors.slate.800/0.6);
-/* --color-accent: theme(colors.teal.300);
-    --color-accent-light: theme(colors.teal.400/0.2); */
     --color-accent: #00ffd5;
     --color-accent-light: rgba(0, 255, 213, 0.2);
     --color-text: theme(colors.slate.300);
@@ -26,18 +27,16 @@
     --color-dark-3: theme(colors.slate.700);
   }
 
-  /* @media(prefers-color-scheme:dark) {
-    :root {
-      --color-bg: theme(colors.slate.900);
-      --color-bg-secondary: theme(colors.slate.800/0.6);
-      --color-accent: #00ffd5;
-      --color-accent-light: rgba(0, 255, 213, 0.2);
-      --color-text: theme(colors.slate.300);
-      --color-dark-1: theme(colors.slate.200);
-      --color-dark-2: theme(colors.slate.500);
-      --color-dark-3: theme(colors.slate.700);
-    }
-  } */
+  .dark {
+    --color-bg: #fcfaf8;
+    --color-bg-secondary: theme(colors.zinc.200/0.6);
+    --color-accent: theme(colors.emerald.600);
+    --color-accent-light: theme(colors.teal.400/0.2);
+    --color-text: theme(colors.slate.500);
+    --color-dark-1: theme(colors.slate.500);
+    --color-dark-2: #282828;
+    --color-dark-3: #a2a2a2;
+  }
 
   * {
     @apply focus:outline-none outline-[3px] outline-offset-4 outline-accent;
