--- a/src/index.css
+++ b/src/index.css
@@ -1,54 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  /* Color variables for future use */
-  /* --color-bg: #fcfaf8; */
-  /* --color-accent: #00ffd5; */
-  /* --color-accent-light: rgba(0, 255, 213, 0.2); */
-  /* --color-accent: #64ffda; */
-  /* --color-accent: #61dafb; */
-  /* --color-text: #383838; */
-  /* --color-dark-2: #282828; */
-  /* --color-dark-3: #a2a2a2; */
-
-  /* --color-accent: theme(colors.teal.300);
-  --color-accent-light: theme(colors.teal.400/0.2); */
-
-  /* Light Mode */
-  :root {
-    --color-bg: #fcfaf8;
-    --color-bg-secondary: theme(colors.zinc.200/0.6);
-    --color-accent: theme(colors.teal.500);
-    --color-accent-light: theme(colors.teal.400/0.2);
-    --color-text: theme(colors.slate.500);
-    --color-dark-1: theme(colors.slate.500);
-    --color-dark-2: theme(colors.slate.400);
-    --color-dark-3: #a2a2a2;
-  }
-
-  .dark {
-    --color-bg: theme(colors.slate.900);
-    --color-bg-secondary: theme(colors.slate.800/0.6);
-    --color-accent: #00ffd5;
-    --color-accent-light: rgba(0, 255, 213, 0.2);
-    --color-text: theme(colors.slate.300);
-    --color-dark-1: theme(colors.slate.200);
-    --color-dark-2: theme(colors.slate.400);
-    --color-dark-3: theme(colors.slate.700);
-  }
-
-  * {
-    @apply focus:outline-none outline-[3px] outline-offset-4 outline-accent;
-  }
-}
-
-.container {
-  @apply w-11/12 mx-auto max-w-screen-xl;
-}
-
-/* Typography */
-.heading-tertiary {
-  @apply text-sm font-bold uppercase text-dark-2;
-}
+@layer reset, base, tokens, recipes, utilities;
