--- a/src/index.css
+++ b/src/index.css
@@ -57,19 +57,30 @@
   bottom: 20px; 
   right: 30px; 
   z-index: 99;
-  background-color: #0c454d;
+  background-color: #0f172a;
   color: white;
-  border: none;
-  padding: 15px;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 18px;
-  display: none; 
+  border: 1.5px solid rgba(148, 163, 184, 1);
+  padding: 1px;
+  border-radius: 8px;
+  cursor: pointer; 
+  width: 50px; 
+  height: 40px;
+  
 }
 .back-to-top:hover {
-  background-color: #063237;
+  border: 1.5px solid #00ffd5;
+  
 }
-.back-to-top-image {
-  width: 28px; 
-  height: 28px;
+.back-to-top:hover .back-to-top-icon {
+  color: #00ffd5;
+}
+
+
+.back-to-top-icon
+{
+  color: #94a3b8;
+  position: fixed;
+  bottom: 27px; 
+  right: 42.5px; 
+   
 }
