--- a/src/index.css
+++ b/src/index.css
@@ -18,16 +18,16 @@
 
   /* Light Mode */
   :root {
-  --color-bg: #ffffff; 
-  --color-bg-secondary: #f1f5f9; 
-  
-  --color-accent: #1E40AF; 
-  --color-accent-light: rgba(30, 64, 175, 0.15);
-  --color-text: #1e293b;   
-  --color-dark-1: #334155; 
-  --color-dark-2: #64748b; 
-  --color-dark-3: #94a3b8;
-}
+    --color-bg: #ffffff;
+    --color-bg-secondary: #f1f5f9;
+
+    --color-accent: #1e40af;
+    --color-accent-light: rgba(30, 64, 175, 0.15);
+    --color-text: #1e293b;
+    --color-dark-1: #334155;
+    --color-dark-2: #64748b;
+    --color-dark-3: #94a3b8;
+  }
 
   .dark {
     --color-bg: theme(colors.slate.900);
@@ -55,33 +55,28 @@
 }
 .back-to-top {
   position: fixed;
-  bottom: 20px; 
-  right: 30px; 
+  bottom: 20px;
+  right: 30px;
   z-index: 99;
   background-color: #0f172a;
   color: white;
   border: 1.5px solid rgba(148, 163, 184, 1);
   padding: 1px;
   border-radius: 8px;
-  cursor: pointer; 
-  width: 50px; 
+  cursor: pointer;
+  width: 50px;
   height: 40px;
-  
 }
 .back-to-top:hover {
   border: 1.5px solid #00ffd5;
-  
 }
 .back-to-top:hover .back-to-top-icon {
   color: #00ffd5;
 }
 
-
-.back-to-top-icon
-{
+.back-to-top-icon {
   color: #94a3b8;
   position: fixed;
-  bottom: 27px; 
-  right: 42.5px; 
-   
+  bottom: 27px;
+  right: 42.5px;
 }
